force-app/main/default/objects/DynamicLabel__c/DynamicLabel__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used as an alternative to custom labels for when you need to perform metadata deployments.</description>
    <label>Dynamic Label</label>
</CustomObject>