force-app/main/default/objects/DynamicLabel__c/fields/ActivateAPIPayload__c.field-meta.xml
<CustomField>
    <fullName>ActivateAPIPayload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether you would like to turn on or turn off APIPayload.</description>
    <label>ActivateAPIPayload</label>
    <type>Checkbox</type>
</CustomField>