force-app/main/default/objects/DynamicLabel__c/fields/ActivateAPIPayloadTrigger__c.field-meta.xml
<CustomField>
    <fullName>ActivateAPIPayloadTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether you would like to turn on or turn off APIPayloadTrigger.</description>
    <label>ActivateAPIPayloadTrigger</label>
    <type>Checkbox</type>
</CustomField>