force-app/main/default/objects/DynamicLabel__c/fields/ActivateCarePlan__c.field-meta.xml
<CustomField>
    <fullName>ActivateCarePlan__c</fullName>
    <label>ActivateCarePlan</label>
	<description>Indicates whether you would like to turn on or turn off CarePlan.</description>
    <defaultValue>false</defaultValue>
	<type>Checkbox</type>
</CustomField>