force-app/main/default/objects/DynamicLabel__c/fields/ActivateResident__c.field-meta.xml
<CustomField>
    <fullName>ActivateResident__c</fullName>
    <label>ActivateResident</label>
	<description>Indicates whether you would like to turn on or turn off Resident.</description>
    <defaultValue>false</defaultValue>
	<type>Checkbox</type>
</CustomField>