force-app/main/default/objects/DynamicLabel__c/fields/ActivateSearchEngine__c.field-meta.xml
<CustomField>
    <fullName>ActivateSearchEngine__c</fullName>
    <label>ActivateSearchEngine</label>
	<description>Indicates whether you would like to turn on or turn off SearchEngine.</description>
    <defaultValue>false</defaultValue>
	<type>Checkbox</type>
</CustomField>