force-app/main/default/objects/DynamicLabel__c/fields/ActivateTransaction__c.field-meta.xml
<CustomField>
    <fullName>ActivateTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether you would like to turn on or turn off Transaction.</description>
    <label>ActivateTransaction</label>
    <type>Checkbox</type>
</CustomField>