force-app/main/default/objects/DynamicLabel__c/fields/ActivateTransactionVisibility__c.field-meta.xml
<CustomField>
    <fullName>ActivateTransactionVisibility__c</fullName>
    <label>ActivateTransactionVisibility</label>
	<description>Indicates whether you would like to turn on or turn off TransactionVisibility.</description>
    <defaultValue>false</defaultValue>
	<type>Checkbox</type>
</CustomField>