force-app/main/default/objects/DynamicLabel__c/fields/ActivateVote__c.field-meta.xml
<CustomField>
    <fullName>ActivateVote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether you would like to turn on or tur</description>
    <label>ActivateVote</label>
    <type>Checkbox</type>
</CustomField>