force-app/main/default/objects/DynamicLabel__c/fields/Salesforce_Default_URL__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Default_URL__c</fullName>
    <label>Salesforce Default URL</label>
	<description>URL of this Salesforce Org.</description>
	<encryptionScheme>None</encryptionScheme>
	<type>Url</type>
</CustomField>