force-app/main/default/objects/DynamicLabel__c/fields/TurnOnNebulaErrorLogs__c.field-meta.xml
<CustomField>
    <fullName>TurnOnNebulaErrorLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether you would like to turn on or turn off Error Nebula Log Entry records.</description>
    <label>Turn On Nebula Error Logs</label>
    <type>Checkbox</type>
</CustomField>