force-app/main/default/objects/DynamicLabel__c/fields/TurnOnNebulaSuccessLogs__c.field-meta.xml
<CustomField>
    <fullName>TurnOnNebulaSuccessLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether you would like to turn on or turn off Success Nebula Log Entry records.</description>
    <label>Turn On Nebula Success Logs</label>
    <type>Checkbox</type>
</CustomField>